--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "com.ionic.keyboard"
   ],
   "cordovaPlatforms": [
-    "android",
+    {
+      "platform": "android",
+      "locator": "browser"
+    },
     "ios"
   ]
 }
